--- a/development.ini
+++ b/development.ini
@@ -7,6 +7,7 @@ debug_routematch = false
 debug_templates = true
 default_locale_name = en
 sqlalchemy.url = sqlite:///%(here)s/riotous101in1001.db
+mako.directories = %(here)s/riotous101in1001/templates
 
 [pipeline:main]
 pipeline =
