Renamed project to riotoustools stubbed out LifeCal feature.

--- a/development.ini
+++ b/development.ini
@@ -1,19 +1,19 @@
-[app:riotous101in1001]
-use = egg:riotous101in1001
+[app:riotoustools]
+use = egg:riotoustools
 reload_templates = true
 debug_authorization = false
 debug_notfound = false
 debug_routematch = false
 debug_templates = true
 default_locale_name = en
-sqlalchemy.url = sqlite:///%(here)s/riotous101in1001.db
-mako.directories = %(here)s/riotous101in1001/templates
+sqlalchemy.url = sqlite:///%(here)s/riotoustools.db
+mako.directories = %(here)s/riotoustools/templates
 
 [pipeline:main]
 pipeline =
     egg:WebError#evalerror
     egg:repoze.tm2#tm
-    riotous101in1001
+    riotoustools
 
 [server:main]
 use = egg:Paste#http
