--- a/setup.cfg
+++ b/setup.cfg
@@ -1,27 +1,27 @@
 [nosetests]
 match=^test
 nocapture=1
-cover-package=riotous101in1001
+cover-package=riotoustools
 with-coverage=1
 cover-erase=1
 
 [compile_catalog]
-directory = riotous101in1001/locale
-domain = riotous101in1001
+directory = riotoustools/locale
+domain = riotoustools
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = riotous101in1001/locale/riotous101in1001.pot
+output_file = riotoustools/locale/riotoustools.pot
 width = 80
 
 [init_catalog]
-domain = riotous101in1001
-input_file = riotous101in1001/locale/riotous101in1001.pot
-output_dir = riotous101in1001/locale
+domain = riotoustools
+input_file = riotoustools/locale/riotoustools.pot
+output_dir = riotoustools/locale
 
 [update_catalog]
-domain = riotous101in1001
-input_file = riotous101in1001/locale/riotous101in1001.pot
-output_dir = riotous101in1001/locale
+domain = riotoustools
+input_file = riotoustools/locale/riotoustools.pot
+output_dir = riotoustools/locale
 previous = true
