Fixed security to use unauthenticated_userid

--- a/development.ini
+++ b/development.ini
@@ -8,6 +8,12 @@ debug_templates = true
 default_locale_name = en
 sqlalchemy.url = sqlite:///%(here)s/riotoustools.db
 mako.directories = %(here)s/riotoustools/templates
+session.type = file
+session.data_dir = %(here)s/data/sessions/data
+session.lock_dir = %(here)s/data/sessions/lock
+session.key = riotouskey
+session.secret = riotoussecret
+session.cookie_on_exception = true
 
 [pipeline:main]
 pipeline =
