--- a/development.ini
+++ b/development.ini
@@ -25,8 +25,10 @@ pipeline =
 use = egg:Paste#http
 host = 0.0.0.0
 port = 6543
-
+threadpool_workers = 10
+use_threadpool = True
 # Begin logging configuration
+
 
 [loggers]
 keys = root, sqlalchemy
