--- a/development.ini
+++ b/development.ini
@@ -1,7 +1,7 @@
 [app:riotoustools]
 use = egg:riotoustools
 reload_templates = true
-debug_authorization = true
+debug_authorization = false
 debug_notfound = false
 debug_routematch = false
 debug_templates = true
