More test coverage and cache regions!

--- a/development.ini
+++ b/development.ini
@@ -8,12 +8,22 @@ debug_templates = true
 default_locale_name = en
 sqlalchemy.url = sqlite:///%(here)s/riotoustools.db
 mako.directories = %(here)s/riotoustools/templates
+
 session.type = file
 session.data_dir = %(here)s/data/sessions/data
 session.lock_dir = %(here)s/data/sessions/lock
 session.key = riotouskey
 session.secret = riotoussecret
 session.cookie_on_exception = true
+
+cache.data_dir = %(here)s/data/cache/data
+cache.lock_dir = %(here)s/data/cache/lock
+cache.region = short_term, long_term
+cache.short_term.type = ext:memcached
+cache.short_term.url = 127.0.0.1:11211
+cache.short_term.expire = 3600
+cache.short_term.type = file
+cache.long_term.expire = 3600
 
 [pipeline:main]
 pipeline =
